# Programming_Challenger

./: .gitignore  CMakeLists.txt  ReadMe.txt  main.cpp  shell_sort.h
problems/: 3n+1.h  Bicoloring.h  Erdos_number.h  Interpreter.h  Jolly_Jumper.h  LC_Display.h  MinesWeeper.h  bridge.h  complete_tree_labling.h  contest_scoreboard.h  counting.h  crypt_kicker.h  distinct_sequence.h  expressions.h  hartals.h  how_many_fibs.h  how_many_pieces_of_land.h  is_bigger_smarter.h  playing_the_wheels.h  poker_hands.h  stack_em_up.h  stack_of_flapjacks.h  vito.h  weights_and_measure.h  yahtzee.h
